--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Padauk&family=Roboto:wght@300&display=swap');
 *{
     padding:0;
     margin:0;
 }
 body{
     background-color:#181818;
+    font-family: 'Roboto', sans-serif;
 }
 
+a{
+    color:white;
+    text-decoration:none
+}
+button{
+    font-family: 'Roboto', sans-serif;
+}
